--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -24,6 +24,16 @@
             <input type="number" name="entryId" id="entryId" required>
             <input type="submit" value="Delete">
         </form>
+        <form id="updateEntryForm">
+            <input type="number" name="entryUpdateId" id="entryUpdateId" required>
+            <label for="checkInDate">Check in</label>
+            <input type="date" name="checkInDate" id="checkInDate">
+            <input type="time" name="checkInTime" id="checkInTime">
+            <label for="checkOutDate">Check out</label>
+            <input type="date" name="checkOutDate" id="checkOutDate">
+            <input type="time" name="checkOutTime" id="checkOutTime">
+            <input type="submit" value="Update">
+        </form>
         <table>
             <thead>
                 <tr>
