--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -25,6 +25,7 @@
             <input type="submit" value="Delete">
         </form>
         <form id="updateEntryForm">
+            <label for="entryUpdateId">Update Entry</label>
             <input type="number" name="entryUpdateId" id="entryUpdateId" required>
             <label for="checkInDate">Check in</label>
             <input type="date" name="checkInDate" id="checkInDate">
